logs/offboard_pkg/build.make.481.log.stderr
In file included from /home/tutu/FControl/mavros_ws/src/offboard_pkg/src/main.cpp:1:
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.h:48:64: error: expected ‘;’ at end of member declaration
   48 |     void Init_lla_line(double yaw_d, Eigen::Vector3d &lla_lead0)
      |                                                                ^
      |                                                                 ;
make[2]: *** [CMakeFiles/offboard_pkg_node.dir/build.make:63: CMakeFiles/offboard_pkg_node.dir/src/main.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
In file included from /home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp:1:
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.h:48:64: error: expected ‘;’ at end of member declaration
   48 |     void Init_lla_line(double yaw_d, Eigen::Vector3d &lla_lead0)
      |                                                                ^
      |                                                                 ;
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp: In member function ‘void MultiBody::Init_lla_line(double, Eigen::Vector3d&)’:
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp:389:50: error: expected ‘;’ before ‘uav’
  389 |             ned = uav[i].get_ned_line(dis, yaw_d)
      |                                                  ^
      |                                                  ;
  390 |             uav[i].ned2lla(ned, lla_lead0, lla);
      |             ~~~                                   
make[2]: *** [CMakeFiles/offboard_pkg_node.dir/build.make:89: CMakeFiles/offboard_pkg_node.dir/src/MultiBody.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:335: CMakeFiles/offboard_pkg_node.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
